--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email_username:  byjungwoon@gmail.com
 
 # Google Analytics
 # To enable google analytics, uncomment below line with a valid Google Tracking ID
-# google_tracking_id:
+google_tracking_id: UA-79172120-2
 
 # Build settings
 markdown: kramdown
