--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 _site
 .sass-cache
 .jekyll-metadata
+.idea/inspectionProfiles/
+.idea/jungwoon.github.io.iml
+.idea/modules.xml
+.idea/workspace.xml
+node_modules/
+package-lock.json
