--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ theme_settings:
   gitter:
   google_plus:
   instagram:
-  linkedin:  # Full URL
+  linkedin:  "https://www.linkedin.com/in/jungwoon-park/" # Full URL
   pinterest:
   reddit:
   soundcloud:
