--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ theme_settings:
 
   # Scripts
   google_analytics: "UA-79172120-2" # Tracking ID, e.g. "UA-000000-01"
-  disqus_shortname:
+  disqus_shortname: "jungwoon_park"
   katex: true # Enable if using math markup
   search: false # Enable the search feature
 
